added a new tex file

--- a/0_Manuscript_and_presentation/final_report.tex
+++ b/0_Manuscript_and_presentation/final_report.tex
@@ -19,9 +19,9 @@
 
 \title{Aircraft Pitch Control via Static and Reinforcement Learning-Based Adaptive PID Controllers}
 
-\author{Muhammad Alfiyandy Hariansyah (ID: 21023691),~\IEEEmembership{PhD Student,~HKUST}% <-this % stops a space
+\author{Muhammad Alfiyandy Hariansyah,~\IEEEmembership{PhD Student,~HKUST}% <-this % stops a space
 \thanks{This report is part of the final project of MECH-6910T, HKUST.}% <-this % stops a space
-\thanks{Manuscript received December 15, 2024}}
+\thanks{Manuscript received December 14, 2024}}
 
 % The paper headers
 \markboth{MECH6910T - Project Final Report, December~2024}%
